@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Make missile and ball spells target a random part for multi-tiled objects.
+Andreas Kirschbaum 2009-06-22
+
 Fix array out-of-bounds accesses for monsters having stats > 30. Makes
 trolls pick up boulders.
 Andreas Kirschbaum 2009-06-22
